--- a/src/env.in
+++ b/src/env.in
@@ -31,8 +31,8 @@ fi
 TMP=
 
 # Update paths
-LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$NEW_LD_PATH
-PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$NEW_PKG_PATH
+export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$NEW_LD_PATH
+export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$NEW_PKG_PATH
 
 # Messages
 echo "New LD_LIBRARY_PATH: ${LD_LIBRARY_PATH}"
