More TODOs fixed.

--- a/src/env.in
+++ b/src/env.in
@@ -21,6 +21,7 @@ NEW_LD_PATH=""
 NEW_PKG_PATH=""
 
 # minimal plugin
+# compile with -DMinimalDir=<Path to where minimal is installed>
 if [ ! -z "@MinimalEnable@" ]; then
     TMP=@MinimalDir@/lib@LIBSUFFIX@
     NEW_LD_PATH=${NEW_LD_PATH}:$TMP
