--- a/.travis.yml
+++ b/.travis.yml
@@ -24,5 +24,6 @@ before_install:
 script:
     - mkdir build && cd build
     - cmake ..
-    - make
+    - ls src/version.h
+    - make VERBOSE=1
     - ctest --output-on-failure
