--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -262,13 +262,13 @@ add_definitions(
 	 -Wextra
 	 )
 
-check_cxx_compiler_flag("-Werror -Wno-inconsistent-missing-override"
+check_cxx_compiler_flag("-Wall -Wextra -Werror -Wno-inconsistent-missing-override"
 	COMPILER_SUPPORTS_OVERRIDE)
 if(COMPILER_SUPPORTS_OVERRIDE)
     add_definitions(-Wno-inconsistent-missing-override)
 endif()
 
-check_cxx_compiler_flag("-Werror --system-header-prefix='FL/'"
+check_cxx_compiler_flag("-Wall -Wextra -Werror --system-header-prefix='FL/'"
 	COMPILER_SUPPORTS_SYSTEM_HDR_PREFIX)
 if(COMPILER_SUPPORTS_SYSTEM_HDR_PREFIX)
     add_definitions(--system-header-prefix="FL/")
