Add MoogFilter test

--- a/src/Tests/CMakeLists.txt
+++ b/src/Tests/CMakeLists.txt
@@ -7,6 +7,7 @@ endfunction()
 add_definitions(-DSOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
 
 CXXTEST_ADD_TEST(MatrixTest MatrixTest.cpp ${CMAKE_CURRENT_SOURCE_DIR}/MatrixTest.h)
+CXXTEST_ADD_TEST(MoogTest MoogTest.cpp ${CMAKE_CURRENT_SOURCE_DIR}/MoogTest.h)
 CXXTEST_ADD_TEST(ControllerTest ControllerTest.cpp ${CMAKE_CURRENT_SOURCE_DIR}/ControllerTest.h)
 CXXTEST_ADD_TEST(EchoTest EchoTest.cpp ${CMAKE_CURRENT_SOURCE_DIR}/EchoTest.h)
 #CXXTEST_ADD_TEST(SampleTest SampleTest.h)
@@ -46,6 +47,7 @@ target_link_libraries(SUBnoteTest    ${test_lib})
 target_link_libraries(ControllerTest ${test_lib})
 target_link_libraries(EchoTest       ${test_lib})
 target_link_libraries(MicrotonalTest ${test_lib})
+target_link_libraries(MoogTest       ${test_lib})
 target_link_libraries(OscilGenTest   ${test_lib})
 target_link_libraries(XMLwrapperTest ${test_lib})
 target_link_libraries(RandTest       ${test_lib})
